@@ -12,6 +12,10 @@ Version History
   
 3.0b3
 -----
+* Drop the 1.0-2.0 migration script. We'll no longer support a direct 1.0-3.0
+  migration.
+  [esteele]
+
 * Dropped the plone3 GS profile, paved over the types/*.xml with versions
   from a working FSD Plone instance.
   [cah190 (Craig Haynal)]
